New panel opening up on running Hello world

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onCommand:vscode-ai-coding-assistant.helloWorld"
+  ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
