--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
+    "build:webview": "webpack",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "lint": "eslint src",
     "test": "vscode-test"
+  
   },
   "devDependencies": {
     "@types/mocha": "^10.0.9",
@@ -53,10 +55,17 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.13.0",
-    "typescript": "^5.6.3"
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.6.3",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "dependencies": {
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "dotenv": "^16.4.7",
-    "openai": "^4.73.1"
+    "openai": "^4.73.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
