--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "build:webview": "webpack",
+    "build": "tsc && webpack", 
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "lint": "eslint src",
